[gd_scene load_steps=10 format=3 uid="uid://bbj6gwox8hrf3"]

[ext_resource type="Script" uid="uid://4jt4q2l1vcnd" path="res://Scripts/Main.gd" id="1_pbw6q"]
[ext_resource type="Texture2D" uid="uid://c5r2jud5cul40" path="res://Assets/Icons/Options.svg" id="1_rgh2o"]
[ext_resource type="StyleBox" uid="uid://cfosmgmdu61td" path="res://Assets/Styleboxes/WindowButtonsBackgroundStylebox.tres" id="2_jw32o"]
[ext_resource type="Texture2D" uid="uid://bmiov6kmwcsu8" path="res://Assets/Icons/Minimize.svg" id="2_pbw6q"]
[ext_resource type="Texture2D" uid="uid://cmym3i10dhv2p" path="res://Assets/Icons/Downloaded.svg" id="2_vy5pj"]
[ext_resource type="Texture2D" uid="uid://pwret2dpnhpd" path="res://Assets/Icons/Products.svg" id="3_bmxlf"]
[ext_resource type="Texture2D" uid="uid://bx25s1kvyvirg" path="res://Assets/Icons/Fullscreen.svg" id="3_v1gob"]
[ext_resource type="Texture2D" uid="uid://bkadpwjc70qta" path="res://Assets/Icons/Close.svg" id="4_jw32o"]
[ext_resource type="PackedScene" uid="uid://3rko5u56gi5j" path="res://Scenes/PopupPage.tscn" id="6_v1gob"]

[node name="Main" type="Control"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_pbw6q")

[node name="Camera" type="Camera2D" parent="."]
anchor_mode = 0

[node name="ScreenContainer" type="AspectRatioContainer" parent="Camera"]
custom_minimum_size = Vector2(1920, 1080)
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Background" type="ColorRect" parent="Camera/ScreenContainer" groups=["Background 1"]]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 2
color = Color(0.0470588, 0.0470588, 0.054902, 1)

[node name="MainContainer" type="HBoxContainer" parent="Camera/ScreenContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="SidePanel" type="ColorRect" parent="Camera/ScreenContainer/MainContainer" groups=["Background 2"]]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
color = Color(0.0666667, 0.0666667, 0.0745098, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Camera/ScreenContainer/MainContainer/SidePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Camera/ScreenContainer/MainContainer/SidePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="List" type="VBoxContainer" parent="Camera/ScreenContainer/MainContainer/SidePanel/VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="Separator" type="ColorRect" parent="Camera/ScreenContainer/MainContainer/SidePanel/VBoxContainer" groups=["Separator"]]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
color = Color(0.0784314, 0.0784314, 0.0862745, 1)

[node name="TogglePageButton" type="TextureButton" parent="Camera/ScreenContainer/MainContainer/SidePanel/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
mouse_default_cursor_shape = 2
toggle_mode = true
texture_normal = ExtResource("2_vy5pj")
texture_pressed = ExtResource("3_bmxlf")
ignore_texture_size = true
stretch_mode = 5

[node name="Separator" type="ColorRect" parent="Camera/ScreenContainer/MainContainer" groups=["Separator"]]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
color = Color(0.0784314, 0.0784314, 0.0862745, 1)

[node name="Body" type="Control" parent="Camera/ScreenContainer/MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="AppBody" type="Control" parent="Camera/ScreenContainer/MainContainer/Body"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ProductsBody" type="Control" parent="Camera/ScreenContainer/MainContainer/Body"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="WindowButtons" type="HBoxContainer" parent="Camera/ScreenContainer"]
custom_minimum_size = Vector2(1920, 50)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2
theme_override_constants/separation = 0
alignment = 2

[node name="Void0" type="Panel" parent="Camera/ScreenContainer/WindowButtons"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(110, 0)
layout_mode = 2

[node name="DragWindowButton" type="Button" parent="Camera/ScreenContainer/WindowButtons"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2

[node name="Void1" type="Panel" parent="Camera/ScreenContainer/WindowButtons"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="Buttons" type="PanelContainer" parent="Camera/ScreenContainer/WindowButtons" groups=["Stylebox Haver"]]
layout_mode = 2
theme_override_styles/panel = ExtResource("2_jw32o")
metadata/StyleboxName = &"WindowButtonsBackgroundStylebox"

[node name="Container" type="HBoxContainer" parent="Camera/ScreenContainer/WindowButtons/Buttons"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="SettingsButton" type="TextureButton" parent="Camera/ScreenContainer/WindowButtons/Buttons/Container"]
unique_name_in_owner = true
texture_filter = 4
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("1_rgh2o")
ignore_texture_size = true
stretch_mode = 5

[node name="Void2" type="Panel" parent="Camera/ScreenContainer/WindowButtons/Buttons/Container"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="MinimizeButton" type="TextureButton" parent="Camera/ScreenContainer/WindowButtons/Buttons/Container"]
unique_name_in_owner = true
texture_filter = 4
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("2_pbw6q")
ignore_texture_size = true
stretch_mode = 5

[node name="Void3" type="Panel" parent="Camera/ScreenContainer/WindowButtons/Buttons/Container"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="FullscreenButton" type="TextureButton" parent="Camera/ScreenContainer/WindowButtons/Buttons/Container"]
unique_name_in_owner = true
texture_filter = 4
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("3_v1gob")
ignore_texture_size = true
stretch_mode = 5

[node name="Void4" type="Panel" parent="Camera/ScreenContainer/WindowButtons/Buttons/Container"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="CloseButton" type="TextureButton" parent="Camera/ScreenContainer/WindowButtons/Buttons/Container"]
unique_name_in_owner = true
texture_filter = 4
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("4_jw32o")
ignore_texture_size = true
stretch_mode = 5

[node name="PopupPage" parent="Camera/ScreenContainer" instance=ExtResource("6_v1gob")]
visible = false
layout_mode = 2

[node name="LoadingScreen" type="ColorRect" parent="Camera/ScreenContainer"]
visible = false
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 2
color = Color(0, 0, 0, 1)
